# ballcam-agent

./: .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.js
.github/workflows/: ci.yml  release.yml
scripts/: generate-ico.mjs  generate-icons.mjs  release.ps1
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  config.rs  lib.rs  main.rs  types.rs  uploader.rs  watcher.rs
src/components/: AppLayout.tsx  DeviceLoginFlow.tsx  FolderDetection.tsx  HistoryItem.tsx  HistoryList.tsx  LoginForm.tsx  SettingsPanel.tsx  SetupWizard.tsx  VisibilityToggle.tsx
src/components/StatusPage/: FolderInfo.tsx  UploadProgress.tsx  UploadStats.tsx  UserCard.tsx  WatcherControl.tsx
src/components/ui/: Logo.tsx  gradient-button.tsx  gradient-card.tsx
src/hooks/: useUpdater.ts
src/lib/: api.ts  store.tsx  types.ts
src/pages/: History.tsx  Main.tsx  Settings.tsx  Setup.tsx
