[package]
name = "ballcam-agent"
version = "1.1.0"
description = "Auto-upload Rocket League replays to BallCam"
authors = ["BallCam"]
edition = "2021"

[lib]
name = "ballcam_agent_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = ["tray-icon", "image-png"] }
tauri-plugin-store = "2.0"
tauri-plugin-autostart = "2.0"
tauri-plugin-http = "2.0"
tauri-plugin-notification = "2.0"
tauri-plugin-shell = "2.0"
tauri-plugin-dialog = "2.0"
notify = "6.0"
reqwest = { version = "0.12", features = ["json", "multipart"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "5.0"
tauri-plugin-updater = "2.9.0"
tauri-plugin-process = "2.3.1"

[target.'cfg(windows)'.dependencies]
tauri-winrt-notification = "0.5"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
